# veva

./: veva.cabal
db/: schema.sql
lib/Veva/: Api.hs  Status.hs  User.hs
lib/Veva/Api/: Types.hs
lib/Veva/Queries/: Status.hs  User.hs
lib/Veva/Resources/: Status.hs  User.hs
lib/Veva/Status/: Queries.hs  Resource.hs  Types.hs
lib/Veva/Types/: Api.hs  NewUser.hs  Status.hs  User.hs
lib/Veva/Types/User/: Email.hs  Id.hs
lib/Veva/User/: Queries.hs  Resource.hs  Types.hs
src/: Main.hs
