name:                veva
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tenor Biel
maintainer:          tenorbiel@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Veva.Types.User,
                       Veva.Types.Status,
                       Veva.Types.Api,
                       Veva.Queries.User,
                       Veva.Queries.Status,
                       Veva.Resources.User,
                       Veva.Resources.Status,
                       Veva.Api
  build-depends:       happstack-server == 7.4.*,
                       hasql-postgres   == 0.10.*,
                       email-validate   == 2.0.*,
                       hasql-backend    == 0.4.*,
                       json-schema      == 0.7.3.*,
                       uuid-aeson       == 0.1.*,
                       attoparsec       == 0.12.*,
                       bytestring       == 0.10.*,
                       rest-core        == 0.35.*,
                       aeson            == 0.8.*,
                       hasql            == 0.7.*,
                       text             == 1.2.0.*,
                       base             == 4.7.*,
                       time             == 1.4.*,
                       uuid             == 1.3.*,
                       mtl              == 2.2.*
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable veva-server
  ghc-options:         -threaded -Wall
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       happstack-server,
                       rest-happstack   == 0.2.10.*,
                       hasql-postgres,
                       bytestring,
                       hasql,
                       veva,
                       base
  default-language:    Haskell2010
